[package]
name = "nmea-0183-validator"
version = "0.0.2"
edition = "2021"
description = "NMEA 0183 no_std validator. Supported senteces: RMC, GGA, GLL."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.10"
